force-app/main/default/objects/Invoice__c/fields/Billing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Document_Number__c</fullName>
    <externalId>true</externalId>
    <label>Billing Document Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>