force-app/main/default/objects/Invoice__c/fields/Billing_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Document_Type__c</fullName>
    <label>Billing Document Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>