force-app/main/default/objects/Invoice__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>