force-app/main/default/objects/Invoice__c/fields/Debit_Credit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Debit_Credit_Flag__c</fullName>
    <label>Debit Credit Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>