force-app/main/default/objects/Invoice__c/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>