force-app/main/default/objects/Invoice__c/fields/Document_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Document_Fiscal_Year__c</fullName>
    <label>Document Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>