force-app/main/default/objects/Invoice__c/fields/Document_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Item_Number__c</fullName>
    <label>Document Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>