force-app/main/default/objects/Invoice__c/fields/Finance_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Finance_Document_Number__c</fullName>
    <label>Finance Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>