force-app/main/default/objects/Invoice__c/fields/Finance_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Document_Type__c</fullName>
    <label>Finance Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>