force-app/main/default/objects/Invoice__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Payer Account)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>