force-app/main/default/objects/Invoice__c/fields/Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Soldto Account)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>