force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sold_To_Account__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Payer_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>